--- a/redocly.yaml
+++ b/redocly.yaml
@@ -6,6 +6,14 @@ extends:
   - recommended
 rules:
   no-unused-components: error
+  path-parameters-defined: off
+  spec: off
+  security-defined: off
+  operation-4xx-response: off
+  no-ambiguous-paths: off
+  no-server-example.com: off
+  info-license: off
+  operation-operationId-url-safe: off
 theme:
   openapi:
     htmlTemplate: ./docs/index.html
@@ -20,3 +28,4 @@ theme:
         - lang: JavaScript
         - lang: PHP
         - lang: Python
+        - lang: TypeScript
